--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,23 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
+html {
+  font-size: 62.5%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container {
+  border: 0.1rem solid #8e8c8c;
+  width: 40rem;
+  height:  40rem;
+  border-radius: 0.4rem;
+  display: grid;
+  padding: 1.6rem;
+  grid-column-gap: 2rem;
+  grid-row-gap: 2rem;
 }
+
